<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customerRegistrationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CustomerRegistration">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/customer_registration_header"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/customerRegistrationScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/customerRegistrationScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/customerRegistrationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerUsernameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerUsernameField"
                    android:text="@string/username_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerUsernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="false"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerEmailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerEmailField"
                    android:text="@string/email_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_field_hint"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerPhoneLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerPhoneField"
                    android:text="@string/phone_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerPhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_field_hint"
                    android:inputType="phone"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerAddressLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerAddressField"
                    android:text="@string/address_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tkLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customertkLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customertkField"
                    android:text="@string/tk_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customertkField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password1Layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerPassword1Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerPassword1Field"
                    android:text="@string/password1_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerPassword1Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password1_field_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password2Layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customerPassword2Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/customerPassword2Field"
                    android:text="@string/password2_label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/customerPassword2Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/customerRegistrationButton"
                android:layout_width="254dp"
                android:layout_height="53dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="35dp"
                android:gravity="center"
                android:text="@string/customer_registration_button_text" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>