<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CommunicationTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CommunicationTypeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/communication_type_header"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/TypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ValueField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/communication_value_hint"
            android:inputType="textPersonName" />
    </LinearLayout>
</FrameLayout>