...
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/from_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fromField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp" />
...
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/toField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp" />
...
