...
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/job_name_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/jobNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

...
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/job_price_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/jobPriceField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

...
